# ProjectBabble

./: pyproject.toml
babble_app/: algo_settings_widget.py  babble_model_loader.py  babble_processor.py  babbleapp.py  babbleapp.spec  camera.py  camera_widget.py  config.py  enums.py  general_settings_widget.py  landmark_model_loader.py  landmark_processor.py  osc.py  osc_calibrate_filter.py
babble_app/audio/: __init__.py
babble_app/utils/: misc_utils.py
