[tool.poetry]
name = "Babble-App"
version = "0.2"
description = "Affordable and Fully Opensource Mouth Tracker for VR"
authors = ["SummerSigh", "RedHawk989"]
license = "MIT"
repository = "https://github.com/SummerSigh/ProjectBabble"

[tool.poetry.dependencies]
python = "~3.11.0"
python-osc = "^1.8.0"
requests = "^2.28.1"
opencv-python = "^4.6.0.66"
numpy = "~1.23.5"
pyaudio = "^0.2.14"
pysimplegui = "^4.60.4"
pydantic = "^1.10.2"
pygrabber = { version = "^0.2", platform = 'win32' }
pyserial = "^3.5"
winotify = [ 
    { version = "^1.1.0", platform = 'win32' }
]
onnxruntime = "^1.15.0"
onnxruntime-directml = { version = "^1.15.0", platform = 'win32' }

colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyinstaller = "^5.6.2"
flake8 = "^5.0.4"
taskipy = "^1.10.4"

[tool.poetry.scripts]
babble = "babble_app.babbleapp:main"

[tool.taskipy.tasks]
dev = "python babbleapp.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
